Generate localized messages

--- a/flutter/lib/l10n/arb/intl_ru_RU.arb
+++ b/flutter/lib/l10n/arb/intl_ru_RU.arb
@@ -723,5 +723,12 @@
     "type": "text",
     "placeholders": {
     }
+  },
+  "emptyDeckNameUserError": "Имя списка не может быть пустым",
+  "@emptyDeckNameUserError": {
+    "description": "Deck Value Can't Be Empty",
+    "type": "text",
+    "placeholders": {
+    }
   }
 }
